# 42hn-ml-part3

./: .gitignore  definitions.py  pyproject.toml
ml_pipeline/assets/: evaluate_model.py  load_data.py  preprocess_data.py  train_model.py
ml_pipeline/config/: config.yaml
ml_pipeline/io_managers/: DataFrameIOManager.py  JsonIOManager.py  PickleIOManager.py
ml_pipeline/resources/: mlflow.py  mlflow_resrc.py
ml_pipeline/utils/: eval_metrics.py
