[project]
name = "42hn-ml-part-3"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.9"
dependencies = [
    "dagster>=1.10.15",
    "dagster-webserver>=1.10.15",
    "jupyter>=1.1.1",
    "kaggle>=1.7.4.5",
    "mlflow>=2.22.0",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
]

[tool.dagster]
module_name = "definitions"
code_location_name = "ml_pipeline"
